# render_on_separate_thread

./: CMakeLists.txt  main.cpp
shaders/: shader.frag  shader.vert
utils/: embedfile.cpp
